--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@
             <div class="row">
               <div class="col-md-5">
                 <img
-                  src="./Images/Fachada.jpg"
+                  src="./images/Fachada.jpg"
                   class="d-block w-100 rounded"
                   alt="frontage store"
                 />
                 <br />
                 <img
-                  src="./Images/jacan.webp"
+                  src="./images/jacan.webp"
                   class="d-block w-100 rounded"
                   alt="frontage store" id="image-chef"
                 />
@@ -178,7 +178,7 @@
           <div class="row mt-4">
             <div class="col-md-4">
               <img
-                src="./Images/Eventos/aniversarios.jpg"
+                src="./images/eventos/aniversarios.jpg"
                 alt="birthdays"
                 class="d-block w-100 rounded mb-2"
               />
@@ -192,7 +192,7 @@
             </div>
             <div class="col-md-4">
               <img
-                src="./Images/Eventos/casamento.jpg"
+                src="./images/eventos/casamento.jpg"
                 alt="weddings"
                 class="d-block w-100 rounded mb-2"
               />
@@ -206,7 +206,7 @@
             </div>
             <div class="col-md-4">
               <img
-                src="./Images/Eventos/confraternizacoes.jpg"
+                src="./images/eventos/confraternizacoes.jpg"
                 alt="confraternization"
                 class="d-block w-100 rounded mb-2"
               />
@@ -280,7 +280,7 @@
                     <div class="col-md-3">
                       <img
                         class="d-block w-100"
-                        src="./Images/Cardapio/Bebidas/coca-cola.jpg"
+                        src="./images/cardapio/bebidas/coca-cola.jpg"
                         alt="Coca-Cola"
                       />
                       <h5 class="text-colored fw-bold mt-2 text-center">
@@ -293,7 +293,7 @@
                     <div class="col-md-3">
                       <img
                         class="d-block w-100"
-                        src="./Images/Cardapio/Bebidas/suco.jpg"
+                        src="./images/cardapio/bebidas/suco.jpg"
                         alt="suco de laranja"
                       />
                       <h5 class="text-colored fw-bold mt-2 text-center">
@@ -306,7 +306,7 @@
                     <div class="col-md-3">
                       <img
                         class="d-block w-100"
-                        src="./Images/Cardapio/Bebidas/coffee.jpg"
+                        src="./images/cardapio/bebidas/coffee.jpg"
                         alt="Coffee"
                       />
                       <h5 class="text-colored fw-bold mt-2 text-center">
@@ -323,7 +323,7 @@
                     <div class="col-md-3">
                       <img
                         class="d-block w-100"
-                        src="./Images/Cardapio/Bebidas/beer.jpg"
+                        src="./images/cardapio/bebidas/beer.jpg"
                         alt="Cerveja"
                       />
                       <h5 class="text-colored fw-bold mt-2 text-center">
@@ -336,7 +336,7 @@
                     <div class="col-md-3">
                       <img
                         class="d-block w-100"
-                        src="./Images/Cardapio/Bebidas/wine.jpg"
+                        src="./images/cardapio/bebidas/wine.jpg"
                         alt="Wine"
                       />
                       <h5 class="text-colored fw-bold mt-2 text-center">
@@ -349,7 +349,7 @@
                     <div class="col-md-3">
                       <img
                         class="d-block w-100"
-                        src="./Images/Cardapio/Bebidas/whisky.jpg"
+                        src="./images/cardapio/bebidas/whisky.jpg"
                         alt="whisky"
                       />
                       <h5 class="text-colored fw-bold mt-2 text-center">
@@ -366,7 +366,7 @@
                     <div class="col-md-3">
                       <img
                         class="d-block w-100"
-                        src="./Images/Cardapio/Entradas/casquinhadesiri.jpg"
+                        src="./images/cardapio/entradas/casquinhadesiri.jpg"
                         alt="Crab"
                       />
                       <h5 class="text-colored fw-bold mt-2 text-center">
@@ -379,7 +379,7 @@
                     <div class="col-md-3">
                       <img
                         class="d-block w-100"
-                        src="./Images/Cardapio/Entradas/tabuasdefrios.jpg"
+                        src="./images/cardapio/entradas/tabuasdefrios.jpg"
                         alt="Cheeses and salami"
                       />
                       <h5 class="text-colored fw-bold mt-2 text-center">
@@ -396,7 +396,7 @@
                     <div class="col-md-3">
                       <img
                         class="d-block w-100"
-                        src="./Images/Cardapio/Pratos principais/arroz de marisco.jpg"
+                        src="./images/cardapio/pratos principais/arroz de marisco.jpg"
                         alt="Rice"
                       />
                       <h5 class="text-colored fw-bold mt-2 text-center">
@@ -409,7 +409,7 @@
                     <div class="col-md-3">
                       <img
                         class="d-block w-100"
-                        src="./Images/Cardapio/Pratos principais/bacalhau.jpg"
+                        src="./images/cardapio/pratos principais/bacalhau.jpg"
                         alt="Cod"
                       />
                       <h5 class="text-colored fw-bold mt-2 text-center">
@@ -422,7 +422,7 @@
                     <div class="col-md-3">
                       <img
                         class="d-block w-100"
-                        src="./Images/Cardapio/Pratos principais/carnedeporco.jpg"
+                        src="./images/cardapio/pratos principais/carnedeporco.jpg"
                         alt="pork"
                       />
                       <h5 class="text-colored fw-bold mt-2 text-center">
@@ -435,7 +435,7 @@
                     <div class="col-md-3">
                       <img
                         class="d-block w-100"
-                        src="./Images/Cardapio/Pratos principais/macarronada.jpg"
+                        src="./images/cardapio/pratos principais/macarronada.jpg"
                         alt="pasta"
                       />
                       <h5 class="text-colored fw-bold mt-2 text-center">
@@ -448,7 +448,7 @@
                     <div class="col-md-3">
                       <img
                         class="d-block w-100"
-                        src="./Images/Cardapio/Pratos principais/pizza.jpg"
+                        src="./images/cardapio/pratos principais/pizza.jpg"
                         alt="pizza"
                       />
                       <h5 class="text-colored fw-bold mt-2 text-center">
@@ -461,7 +461,7 @@
                     <div class="col-md-3">
                       <img
                         class="d-block w-100"
-                        src="./Images/Cardapio/Pratos principais/salmao.jpg"
+                        src="./images/cardapio/pratos principais/salmao.jpg"
                         alt="salmon"
                       />
                       <h5 class="text-colored fw-bold mt-2 text-center">
@@ -478,7 +478,7 @@
                     <div class="col-md-3">
                       <img
                         class="d-block w-100"
-                        src="./Images/Cardapio/Sobremesas/cookies.jpg"
+                        src="./images/cardapio/sobremesas/cookies.jpg"
                         alt="Cookies"
                       />
                       <h5 class="text-colored fw-bold mt-2 text-center">
@@ -491,7 +491,7 @@
                     <div class="col-md-3">
                       <img
                         class="d-block w-100"
-                        src="./Images/Cardapio/Sobremesas/tortas.jpg"
+                        src="./images/cardapio/sobremesas/tortas.jpg"
                         alt="Cake"
                       />
                       <h5 class="text-colored fw-bold mt-2 text-center">
