--- a/index.html
+++ b/index.html
@@ -73,21 +73,21 @@
             <div class="carousel-item active" data-bs-interval="3000">
               <img
                 class="w-100"
-                src="./Images/Slides/1.jpg"
+                src="./images/slides/1.jpg"
                 alt="restaurant"
               />
             </div>
             <div class="carousel-item" data-bs-interval="3000">
               <img
                 class="w-100"
-                src="./Images/Slides/2.jpg"
+                src="./images/slides/2.jpg"
                 alt="table with food"
               />
             </div>
             <div class="carousel-item" data-bs-interval="3000">
               <img
                 class="w-100"
-                src="./Images/Slides/3.jpg"
+                src="./images/ssslides/3.jpg"
                 alt="table with wine"
               />
             </div>
